<resources>
    <string name="app_name">PartyApp</string>
    <string name="don_t_have_an_account_register">"Don't have an account?         <u>Register</u>     "</string>
    <string name="facebook_app_id" translatable="false">1383750851765122</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1383750851765122</string>
    <string name="skip_intro"><![CDATA[Skip >>]]></string>
    <string name="google_maps_key">AIzaSyDv76XGp9lWgIMBXk9_f4-nXDqVmq6DebM</string>
    <string name="full_control">Full Control</string>
    <string name="get_full_control_over_your_experience">Get full control over your experience</string>
    <string name="open_account_with_ease">Open Account with Ease</string>
    <string name="open_party_pwe_account_with_few_simple_steps">Open party pwe account with few simple steps</string>
    <string name="discover">Discover!!</string>
    <string name="find_the_best_parties_and_make_new_friends">Find the best parties and make new friends</string>
    <string name="royalty">Royalty!!</string>
    <string name="earn_loyalty_points_by_sharing_moments">Earn loyalty points by sharing moments</string>
    <string name="start">Start</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your name</string>
    <string name="your_gender">Your gender</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="bio">Bio</string>
    <string name="text_continue">Continue</string>
    <string name="open_camera">Open Camera</string>
    <string name="upload_from_storage">Upload from storage</string>
    <string name="forget_your_password">FORGET YOUR PASSWORD</string>
    <string name="in_order_to_reset_your_password_please_enter_the_e_mail_address_you_used_for_registration">In order to
        reset your password, please enter the e-mail address you used for registration
    </string>
    <string name="e_mail_address">E-mail address</string>
    <string name="submit">Submit</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="please_type_the_verification_code_below_and_give_a_new_password">Please type the verification code
        below and give a new password
    </string>
    <string name="code">Code</string>
    <string name="password">Password</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_password">Your Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="register_account">Register Account</string>
    <string name="your_e_mail_address">Your E-mail Address</string>
    <string name="the_password_must_be_at_least_8_characters_and_combination_of_atleast_one_upper_letter_and_lower_letter">
        The password must be at least 8 characters and combination of atleast one upper letter and lower letter.
    </string>
    <string name="by_registering_i_am_accepting">**By registering I am accepting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="and">and</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="please_wait">Please wait ...</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="filter">Filter</string>
    <string name="most_recent">Most Recent</string>
    <string name="following">Following</string>
    <string name="closest_location">Closest location</string>
    <string name="most_liked">Most Liked</string>
    <string name="most_comments">Most Comments</string>
    <string name="crowded">Large Crowd</string>
    <string name="quiet">Small Crowd</string>
    <string name="last_24_hours">Last 24 hours</string>
    <string name="last_48_hours">Last 48 hours</string>
    <string name="followers">Followers</string>
    <string name="you_have_0_followers">You have no follower</string>
    <string name="loyality">Loyalty</string>
    <string name="my_rewards">MY Rewards</string>
    <string name="redeem">Redeem</string>
    <string name="my_points">MY POINTS</string>
    <string name="offer_from_vendor_1">offer from vendor 1</string>
    <string name="reedem_point_100">Reedem point: 100</string>
    <string name="posts">Posts</string>
    <string name="shared_by_me">Shared by me</string>
    <string name="settings">Settings</string>
    <string name="myanmar">MYANMAR</string>
    <string name="english">ENGLISH</string>
    <string name="post_photos_on_facebook">Post photos on Facebook</string>
    <string name="notification">Notification</string>
    <string name="visit_website">Visit Website</string>
    <string name="logout">Logout</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">New Name</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="user_e_mail_com">user@e-mail.com</string>
    <string name="send">send</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="comment">Comment</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="live">Live</string>
    <string name="loading">Loading . .</string>
    <string name="stop">Stop</string>
    <string name="how_are_you_feeling">How Are You Feeling</string>
    <string name="next">Next</string>
    <string name="invite_friends">invite friends</string>
    <string name="joshua_blonz">Joshua Blonz</string>
    <string name="likes">Likes</string>
    <string name="location">Location</string>
    <string name="enter_postal_code_or_address">Enter postal code or address</string>
    <string name="select">Select</string>
    <string name="home">Home</string>
    <string name="media">Media</string>
    <string name="write_something">Write something</string>
    <string name="how_big_is_the_crowd">How Big Is The Crowd</string>
    <string name="how_much_fun_is_it">How Much Fun Is It</string>
    <string name="tag_friend">Tag Friends</string>
    <string name="photo_effect">Photo Effect</string>
    <string name="upload">UPLOAD</string>
    <string name="media_details">Media Details</string>
    <string name="comments">Comments</string>
    <string name="see_all">See all</string>
    <string name="photo">Photo</string>
    <string name="tag_followers">Tag Followers</string>
    <string name="tagged_followers">Tagged Followers</string>
    <string name="info_page">Info page</string>
    <string name="what_are_you_doing">What are you Doing</string>
    <string name="follow">Follow</string>
    <string name="view">View</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_gender">Please enter your gender</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_date_of_birth">Please enter your date of birth</string>
    <string name="please_enter_your_bio">Please enter your bio</string>
    <string name="profile_update_successfully">Profile update successfully</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_code_from_your_email">Please enter code from your email</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="please_provide_valid_username">Please provide valid username!</string>
    <string name="please_provide_a_vaid_password">Please provide a vaid password!</string>
    <string name="name_field_can_not_be_empty">Name field can\'t be empty</string>
    <string name="email_field_can_not_be_empty">Email field can\'t be empty</string>
    <string name="you_must_enter_a_password">You must enter a password</string>
    <string name="please_give_all_permission">please give all permissions</string>
    <string name="you_have_xx_follower">YOU HAVE %1$s FOLLOWERS</string>
    <string name="you_are_following_xx">YOU ARE FOLLOWING %1$s</string>
    <string name="dhaka">Dhaka</string>
    <string name="invalid_file">Invalid file</string>
    <string name="invalid_video">Invalid video</string>
    <string name="invaild_image">Invalid image</string>
    <string name="posts_not_found">Posts not found.</string>
    <string name="layalty_not_found">Loyalty not found</string>
    <string name="please_rate_the_crowed">Please rate the crowed</string>
    <string name="please_rate_the_fun">Please rate the fun</string>
    <string name="please_tag_a_location">Please tag a location</string>
    <string name="xx_people">%1$s people</string>
    <string name="my_location">My location</string>
    <string name="party_location">Party location</string>
    <string name="please_write_a_comment">Please write a comment</string>
    <string name="points_xx">Ponts: %1$s </string>
    <string name="xx_likes">%1$s Likes</string>
    <string name="xx_comments">%1$s Comments</string>
    <string name="gps_disabled_enabled_it">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="terms_amp_service"><![CDATA[Terms & Service]]></string>
    <string name="you_have_no_followers">You have no followers</string>
    <string name="password_do_not_match_or_you_have_used_before">Password do not match or you have used before</string>
    <string name="thank_you_for_your_email_we_will_get_back_to_you_asap">Thank you for your email, we will get back to you ASAP</string>
    <string name="try_again_please">Try Again, Please</string>
    <string name="sorry_this_e_mail_is_not_registered_yet_would_you_like_to_signup_this_e_mail">Sorry, this e-mail is not registered yet. Would you like to signup this e-mail?</string>
    <string name="invalid_e_mail">Invalid E-mail</string>
    <string name="cancel">CANCEL</string>
    <string name="yes_sure">YES, SURE</string>
    <string name="please_turn_on_device_location_to_enjoy_best_experience">Please turn on device location to enjoy best experience</string>
    <string name="message">Message</string>
    <string name="ok">Ok</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="successful">Successful</string>
    <string name="post_created_successful">Post created successful</string>
    <string name="apply">Apply</string>
    <string name="no_post_found_please_try_with_different_filter_combination">No post found. Please try with different filter combination.</string>
    <string name="no_post_yet">No post yet</string>
    <string name="congratulations_your_account_has_been_created">Congratulations! Your account has been created.</string>
    <string name="done">Done</string>
    <string name="fun">Most Fun</string>
    <string name="watching_movie">Watching movie</string>
    <string name="reading">Reading</string>
    <string name="drinking">Drinking</string>
    <string name="eating">Eating</string>
    <string name="thinking">Thinking</string>
    <string name="please_enter_your_activity">Please select your activity</string>
    <string name="lucky">Lucky</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="impressed">Impressed</string>
    <string name="amused">Amused</string>
    <string name="please_enter_your_feelings">Please select your feelings</string>
    <string name="feeling_activity">Feeling/Activity</string>
</resources>