<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

    <TextView
            android:fontFamily="@font/za"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_e_mail"
            android:gravity="center_horizontal"
            android:textColor="@color/color_blue"
            android:textStyle="bold"
            android:textSize="16sp" />

    <TextView
            android:fontFamily="@font/za"
            android:text="@string/sorry_this_e_mail_is_not_registered_yet_would_you_like_to_signup_this_e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_text"
            android:textAlignment="center" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:textColor="@color/color_text"
                android:text="@string/cancel"
                android:layout_alignParentLeft="false"
                android:layout_toLeftOf="@+id/btnYes"
                android:background="#E0EAF1"
                android:layout_marginRight="5dp" />

        <Button
                android:id="@+id/btnSure"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/color_text"
                android:layout_height="40dp"
                android:text="@string/yes_sure"
                android:layout_alignParentRight="true"
                android:background="#E0EAF1" />


    </LinearLayout>

</LinearLayout>